--- a/details.html
+++ b/details.html
@@ -3,17 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>POLLz-Details</title>
+    <title>POLLz - Details</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1>POLLz</h1>
     </header>
-    <main style="text-align:center; margin-top:40px;">
+    <main id="details-main" style="text-align:center; margin-top:40px;">
         <h2>Poll Details</h2>
-        <p>This is the details page. (Functionality coming soon!)</p>
-        <a href="index.html" style="color:#1976d2; text-decoration:underline;">Back to Feed</a>
+        <div id="tabs-container" class="tabs-container"></div>
+        <div id="charts-container" class="charts-container" style="display:flex; justify-content:center; gap:40px; margin-top:30px;"></div>
+        <div id="loading-message" style="margin-top:20px; color:#1976d2; font-weight:bold;"></div>
+        <a href="index.html" style="color:#1976d2; text-decoration:underline; display:block; margin-top:40px;">Back to Feed</a>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="details.js"></script>
 </body>
 </html> 
